--- a/page.html
+++ b/page.html
@@ -7,7 +7,9 @@
 
     <body>
         <header>
-
+            <nav>
+                
+            </nav>
         </header>
 
         <main>
@@ -32,6 +34,6 @@
         <footer>
 
         </footer>
-        
+
     </body>
 </html>
