ajout de nav dans le header

--- a/page.html
+++ b/page.html
@@ -18,7 +18,7 @@
 
             </nav>
 
-            <section>
+            <section> <!--article dans section ou l'inverse ?-->
                 <aside>
 
                 </aside>
