--- a/page.html
+++ b/page.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"> 
-        <title>Reservia.</title>
+        <title>Reservia</title>
     </head>
 
     <body>
