--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8"> 
+        <meta charset="UTF-8" /> 
+        <link rel="stylesheet" href="style.css" />
         <title>Reservia</title>
     </head>
 
     <body>
         <header>
+            <p>test</p> <!--test, il faut effacer cette ligne plus tard -->
+            <figure>
+                <img src="images/logo/Reservia.svg" alt="Logo Reservia" />
+            </figure>
             <nav>
                 <ul>
                     <li>Hébergements</li>
