update html +css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8" /> 
         <link rel="stylesheet" href="style.css" />
         <title>Reservia</title>
+        <meta name="viewport" content="width=device-width", initial-scale=1.0"> <!--forcer le bon niveau de zoom aux navigateurs mobiles-->
     </head>
 
     <body>
         <header>
-            <p>test</p> <!--test, il faut effacer cette ligne plus tard -->
             <figure>
-                <img src="images/logo/Reservia.svg" alt="Logo Reservia" />
+                <img src="images/logo/Reservia.svg" class="logo" alt="Logo Reservia" />
             </figure>
             <nav>
                 <ul>
@@ -27,7 +27,7 @@
 
             </nav>
 
-            <section> <!--article dans section ou l'inverse ?-->
+            <section> <!--article dans section ou l'inverse ?-->                
                 <aside>
 
                 </aside>
