lien cliquable + ancre

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             </figure>
             <nav>
                 <ul>
-                    <li>Hébergements</li>
-                    <li>Activités</li>
-                    <li>S'inscrire</li>
+                    <a href="#ancreherberg"<li>Hébergements</li></a>
+                    <a href="#ancreactiv"<li>Activités</li></a>
+                    <li class="inscrire">S'inscrire</li>
                 </ul>
             </nav>
         </header>
