--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </figure>
             <nav>
                 <ul>
-                    <a href="#ancreherberg"<li>Hébergements</li></a>
+                    <a href="#ancreheberg"<li>Hébergements</li></a> <!--Faire id="ancreheberg" plus bas-->
                     <a href="#ancreactiv"<li>Activités</li></a>
                     <li class="inscrire">S'inscrire</li>
                 </ul>
