a dans li et non l'inverse !

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             </figure>
             <nav>
                 <ul>
-                    <a href="#ancreheberg"<li>Hébergements</li></a> <!--Faire id="ancreheberg" plus bas-->
-                    <a href="#ancreactiv"<li>Activités</li></a>
+                    <li><a href="#ancreheberg">Hébergements</a></li> <!--Faire id="ancreheberg" plus bas-->
+                    <li><a href="#ancreactiv">Activités</a></li>
                     <li class="inscrire">S'inscrire</li>
                 </ul>
             </nav>
