--- a/index.html
+++ b/index.html
@@ -21,15 +21,35 @@
             </nav>
         </header>
         <main>
-            <nav>
-            </nav>
-            <!--article dans section ou l'inverse ?--> 
-            <section>               
+            <section class="top">
+            <header>
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleine nature</p>
+            </header>
+                    <div class="search">
+                      <input type="search" id="maRecherche" name="q"
+                       placeholder="Marseille, France">
+                      <button>Rechercher</button>
+                    </div>
+            <div class="filtre">
+                <p>Filtres</p>
+                <ul>
+                    <li>Economique</li>
+                    <li>Familial</li>
+                    <li>Romantique</li>
+                    <li>Animaux autorisés</li>
+                </ul>
+            </div>
+            <aside>
+                <p>Plus de 500 logements sont disponibles dans cette ville</p>
+            </aside>
+            </section>
+            <article>               
                 <aside>
                 </aside>
-                <article>
-                </article>
-            </section>
+                <section>
+                </section>
+            </article>
         </main>
         <footer>
         </footer>
