flexbox header + Mobile First

--- a/index.html
+++ b/index.html
@@ -9,18 +9,13 @@
     </head>
     <body>
         <header>
-                <!--ALT pour le référencement des images, affiche le texte si connexion lente-->
-                <img src="images/logo/Reservia.svg" id="logo" alt="Logo Reservia" /> 
-            <nav class="navigation">
-                <ul>
-                    <!--Faire id="ancreheberg" plus bas // TITLE pour guider l'utilisateur sur ce qu'il voit-->
-                    <li><a href="#AncreHeberg" title="Hébergements">Hébergements</a></li> 
-                    <li><a href="#AncreActiv" title="Activités">Activités</a></li>
-                    <li class="inscrire">S'inscrire</li>
-                </ul>
-            </nav>
+            <div class="navUn">Image1</div>
+            <div class="navQuatre">S'inscrire4</div>
+            <div class="navDeux">Hébergements2</div>
+            <div class="navTrois">Activités3</div>
         </header>
-        <main>
+        <!--
+        <main> 
             <section class="top">
             <header>
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -51,6 +46,7 @@
                 </section>
             </article>
         </main>
+        -->
         <footer>
         </footer>
     </body>
