--- a/index.html
+++ b/index.html
@@ -1,53 +1,28 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8" /> 
-        <link rel="stylesheet" href="style.css" />
-        <title>Reservia</title>
-        <!--forcer le bon niveau de zoom aux navigateurs mobiles-->
-        <meta name="viewport" content="width=device-width", initial-scale=1.0"> 
-    </head>
-    <body>
-        <header>
-            <div class="navUn">Image1</div>
-            <div class="navQuatre">S'inscrire4</div>
-            <div class="navDeux">Hébergements2</div>
-            <div class="navTrois">Activités3</div>
-        </header>
-        <!--
-        <main> 
-            <section class="top">
-            <header>
-                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                <p>En plein centre ville ou en pleine nature</p>
-            </header>
-                    <div class="search">
-                      <input type="search" id="maRecherche" name="q"
-                       placeholder="Marseille, France">
-                      <button>Rechercher</button>
-                    </div>
-            <div class="filtre">
-                <p>Filtres</p>
-                <ul>
-                    <li>Economique</li>
-                    <li>Familial</li>
-                    <li>Romantique</li>
-                    <li>Animaux autorisés</li>
-                </ul>
-            </div>
-            <aside>
-                <p>Plus de 500 logements sont disponibles dans cette ville</p>
-            </aside>
-            </section>
-            <article>               
-                <aside>
-                </aside>
-                <section>
-                </section>
-            </article>
-        </main>
-        -->
-        <footer>
-        </footer>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <!--Eviter le navigateur de mettre du code par défaut-->
+    <link rel="stylesheet" href="reset.css">
+    <title>Reservia</title>
+</head>
+<body>
+    <header>
+        <div class="navUn"><img src="img/logo/Reservia.svg" alt="Logo"></div>
+        <div class="navQuatre">S'inscrire</div>
+        <div class="navDeux">Hébergements</div>
+        <div class="navTrois"><a href="#" class="link">Activités</a></div>
+    <header>
+</body>
 </html>
+
+
+<!--
+Vu avec Audrey :
+Regarder pour faire appel à différente feuille CSS Desktop Tablette Mobile par exemple (regarder le Git de Audrey)
+Regarder les propiétés suivantes : flex-basis / flex-grow
+Adapter les tailles, margin, padding etc autour de mes noms + adapter le logo
+Tester W3C HTML & CSS
+-->
