exo_jsfiddle_from_scratch

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header>
-        <div class="navUn"><img src="img/logo/Reservia.svg" alt="Logo"></div>
-        <div class="navQuatre">S'inscrire</div>
-        <div class="navDeux">Hébergements</div>
-        <div class="navTrois"><a href="#" class="link">Activités</a></div>
-    <header>
+        <div class="nav1"><a class="lien1" href="#"><img src="https://github.com/audreydiez/AudreyDiez_2_02122020/blob/master/assets/images/logo/Reservia@3x.png?raw=tr   ue" alt="Logo" /></a></div>
+        <div class="nav4"><a class="lien4" href="#">4S'inscrire</a></div>
+        <div class="nav2"><a class="lien2" href="#">2Hébergements</a></div>
+        <div class="nav3"><a class="lien3" href="#">3Activités</a></div>
+      </header>
 </body>
 </html>
 
