--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <!--Eviter le navigateur de mettre du code par défaut-->
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <title>Reservia</title>
 </head>
 <body>
     <header>
-        <div class="nav1"><a class="lien1" href="#"><img src="https://github.com/audreydiez/AudreyDiez_2_02122020/blob/master/assets/images/logo/Reservia@3x.png?raw=tr   ue" alt="Logo" /></a></div>
-        <div class="nav4"><a class="lien4" href="#">4S'inscrire</a></div>
-        <div class="nav2"><a class="lien2" href="#">2Hébergements</a></div>
-        <div class="nav3"><a class="lien3" href="#">3Activités</a></div>
-      </header>
+        <nav>
+            <ul>
+                <li class="nav1"><a class="lien1" href="#"><img src="img/logo/Reservia.svg" alt="Logo" /></a></li>
+                <li class="nav4"><a class="lien4" href="#">S'inscrire</a></li>
+                <li class="nav2"><a class="lien2" href="#">Hébergements</a></li>
+                <li class="nav3"><a class="lien3" href="#">Activités</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
-
-
 <!--
 Vu avec Audrey :
-Regarder pour faire appel à différente feuille CSS Desktop Tablette Mobile par exemple (regarder le Git de Audrey)
-Regarder les propiétés suivantes : flex-basis / flex-grow
 Adapter les tailles, margin, padding etc autour de mes noms + adapter le logo
 Tester W3C HTML & CSS
 -->
