--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header>
         <nav>
             <ul>
-                <li class="nav1"><a class="lien1" href="#"><img src="img/logo/Reservia.svg" alt="Logo" /></a></li>
-                <li class="nav4"><a class="lien4" href="#">S'inscrire</a></li>
-                <li class="nav2"><a class="lien2" href="#">Hébergements</a></li>
-                <li class="nav3"><a class="lien3" href="#">Activités</a></li>
+                <li class="nav1"><a href="#"><img src="img/logo/Reservia.svg" alt="Logo" /></a></li>
+                <li class="nav4"><a href="#">S'inscrire</a></li>
+                <li class="nav2"><a href="#">Hébergements</a></li>
+                <li class="nav3"><a href="#">Activités</a></li>
             </ul>
         </nav>
     </header>
