--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <ul>
                 <li class="nav1"><a href="#"><img src="img/logo/Reservia.svg" alt="Logo" /></a></li>
                 <li class="nav4"><a href="#">S'inscrire</a></li>
-                <li class="nav2"><a href="#">Hébergements</a></li>
-                <li class="nav3"><a href="#">Activités</a></li>
+                <li class="nav2"><a href="#hebergements">Hébergements</a></li>
+                <li class="nav3"><a href="#activites">Activités</a></li>
             </ul>
        </nav>
     </header>
