--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/tablette.css">
     <link rel="stylesheet" href="css/desktop.css">
     <title>Reservia</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">  
+    <script src="https://kit.fontawesome.com/618c5c7058.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -23,6 +24,9 @@
             </ul>
        </nav>
     </header>
+    <main>
+        <div class="wrapper-icone"><i class="fas fa-info"></i></div>
+    </main>
 </body>
 </html>
 <!--
