main header mobile ok

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
        </nav>
     </header>
     <main>
-        <div class="wrapper-icone"><i class="fas fa-info"></i></div>
+        <header>
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre ville ou en pleine nature</p>
+        </header>
+        <!--<div class="wrapper-icone"><i class="fas fa-info"></i></div>-->
     </main>
 </body>
 </html>
