--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                 <div class="border-search-bar">
                     <input type="search" id="maRecherche" name="q" placeholder="Marseille, France"
                         aria-label="Rechercher des logements sur le site">
-                    <button>Rechercher</button>
+                    <div class="search-button">
+                        <i class="fas fa-search"></i>
+                    </div>
                 </div>
             </form>
         </section>
