--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             </header>
             <form class="search-bar">
                 <div class="border-search-bar">
+                    <div class="map-button">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
                     <input type="search" id="maRecherche" name="q" placeholder="Marseille, France"
                         aria-label="Rechercher des logements sur le site">
                     <div class="search-button">
