--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="assets/css/desktop.css">
     <title>Reservia</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/618c5c7058.js" crossorigin="anonymous"></script>
 </head>
 
@@ -44,6 +47,23 @@
                     </div>
                 </div>
             </form>
+            <div class="container-filters">
+                <ul class="filters">
+                    <li class="filter-title">Filtres</li>
+                    <li><a href="#"><i class="fas fa-money-bill-wave"></i>
+                            <div>Economique</div>
+                        </a></li>
+                    <li><a href="#"><i class="fas fa-child"></i>
+                            <div>Familial</div>
+                        </a></li>
+                    <li><a href="#"><i class="fas fa-heart"></i>
+                            <div>Romantique</div>
+                        </a></li>
+                    <li><a href="#"><i class="fas fa-dog"></i>
+                            <div>Animaux autorisés</div>
+                        </a></li>
+                </ul>
+            </div>
         </section>
         <!--<div class="wrapper-icone"><i class="fas fa-info"></i></div>-->
     </main>
