--- a/index.html
+++ b/index.html
@@ -50,22 +50,29 @@
             <div class="container-filters">
                 <ul class="filters">
                     <li class="filter-title">Filtres</li>
-                    <li><a href="#"><i class="fas fa-money-bill-wave"></i>
-                            <div>Economique</div>
+                    <li><a href="#">
+                            <div class="wrapper-icone"><i class="fas fa-money-bill-wave"></i></div>
+                            <div class="wrapper-filtre">Economique</div>
                         </a></li>
-                    <li><a href="#"><i class="fas fa-child"></i>
-                            <div>Familial</div>
+                    <li><a href="#">
+                            <div class="wrapper-icone"><i class="fas fa-child"></i></div>
+                            <div class="wrapper-filtre">Familial</div>
                         </a></li>
-                    <li><a href="#"><i class="fas fa-heart"></i>
-                            <div>Romantique</div>
+                    <li><a href="#">
+                            <div class="wrapper-icone"><i class="fas fa-heart"></i></div>
+                            <div class="wrapper-filtre">Romantique</div>
                         </a></li>
-                    <li><a href="#"><i class="fas fa-dog"></i>
-                            <div>Animaux autorisés</div>
+                    <li><a href="#">
+                            <div class="wrapper-icone"><i class="fas fa-dog"></i></div>
+                            <div class="wrapper-filtre">Animaux autorisés</div>
                         </a></li>
                 </ul>
             </div>
+            <div class="container-info">
+                <div class="wrapper-info"><i class="fas fa-info"></i></div>
+                <aside>Plus de 500 logements sont disponibles dans cette ville</aside>
+            </div>
         </section>
-        <!--<div class="wrapper-icone"><i class="fas fa-info"></i></div>-->
     </main>
 </body>
 
