id=searchSection id pour section et début convention de nommage camelCase

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <main>
-        <section class="search">
+        <section id="searchSection">
             <header>
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
@@ -75,5 +75,5 @@
 
 </html>
 <!--
-Tester W3C HTML & CSS..
+Tester W3C HTML & CSS
 -->
