--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <header>
         <nav>
             <ul>
-                <li class="nav1"><a href="#"><img src="assets/img/logo/Reservia.svg" alt="Logo" /></a></li>
-                <li class="nav2"><a href="#hebergements">Hébergements</a></li>
-                <li class="nav3"><a href="#activites">Activités</a></li>
-                <li class="nav4"><a href="#">S'inscrire</a></li>
+                <li class="navUn"><a href="#"><img src="assets/img/logo/Reservia.svg" alt="Logo" /></a></li>
+                <li class="navQuatre"><a href="#">S'inscrire</a></li>
+                <li class="navDeux"><a href="#hebergements">Hébergements</a></li>
+                <li class="navTrois"><a href="#activites">Activités</a></li>
             </ul>
         </nav>
     </header>
@@ -32,41 +32,41 @@
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
             </header>
-            <form class="search-bar">
-                <div class="border-search-bar">
-                    <div class="map-button">
+            <form id="searchBar">
+                <div id="borderSearchBar">
+                    <div id="mapButton">
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <input type="search" id="maRecherche" name="q" placeholder="Marseille, France"
                         aria-label="Rechercher des logements sur le site">
-                    <div class="search-button">
+                    <div id="searchButton">
                         <i class="fas fa-search"></i>
                     </div>
                 </div>
             </form>
-            <div class="container-filters">
-                <ul class="filters">
-                    <li class="filter-title">Filtres</li>
+            <div id="containerFilters">
+                <ul id="categoryFilters">
+                    <li id="filterTitle">Filtres</li>
                     <li><a href="#">
-                            <div class="wrapper-icone"><i class="fas fa-money-bill-wave"></i></div>
-                            <div class="wrapper-filtre">Economique</div>
+                            <div class="wrapperIcone"><i class="fas fa-money-bill-wave"></i></div>
+                            <div class="wrapperFiltre">Economique</div>
                         </a></li>
                     <li><a href="#">
-                            <div class="wrapper-icone"><i class="fas fa-child"></i></div>
-                            <div class="wrapper-filtre">Familial</div>
+                            <div class="wrapperIcone"><i class="fas fa-child"></i></div>
+                            <div class="wrapperFiltre">Familial</div>
                         </a></li>
                     <li><a href="#">
-                            <div class="wrapper-icone"><i class="fas fa-heart"></i></div>
-                            <div class="wrapper-filtre">Romantique</div>
+                            <div class="wrapperIcone"><i class="fas fa-heart"></i></div>
+                            <div class="wrapperFiltre">Romantique</div>
                         </a></li>
                     <li><a href="#">
-                            <div class="wrapper-icone"><i class="fas fa-dog"></i></div>
-                            <div class="wrapper-filtre">Animaux autorisés</div>
+                            <div class="wrapperIcone"><i class="fas fa-dog"></i></div>
+                            <div class="wrapperFiltre">Animaux autorisés</div>
                         </a></li>
                 </ul>
             </div>
-            <div class="container-info">
-                <div class="wrapper-info"><i class="fas fa-info"></i></div>
+            <div id="containerInfo">
+                <div id="wrapperInfo"><i class="fas fa-info"></i></div>
                 <aside>Plus de 500 logements sont disponibles dans cette ville</aside>
             </div>
         </section>
