--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/mobile.css">
     <link rel="stylesheet" href="assets/css/tablette.css">
@@ -67,10 +67,37 @@
             </div>
             <div id="containerInfo">
                 <div id="wrapperInfo"><i class="fas fa-info"></i></div>
-                <aside>Plus de 500 logements sont disponibles dans cette ville</aside>
+                <aside id="asideFilter">Plus de 500 logements sont disponibles dans cette ville</aside>
             </div>
         </section>
+        <section id="hostingSection">
+            <aside id="mostPopular">
+                <header>
+                    <h2>Les plus populaires</h2>
+                    <div id="wrapperIcone"><i class="fas fa-chart-line"></i></div>    
+                </header>
+                <figure>
+                    <img src="/assets/img/hebergements/popular1.jpg"
+                         alt="Hotel Le soleil du matin">
+                    <figcaption>Hotel Le soleil du matin</figcaption>
+                </figure>
+                <figure>
+                    <img src="/assets/img/hebergements/popular2.jpg"
+                         alt="Au coeur de l'eau Chambres d'hôtes">
+                    <figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
+                </figure>
+                <figure>
+                    <img src="/assets/img/hebergements/popular3.jpg"
+                         alt="Hôtel Tout bleu et Blanc">
+                    <figcaption>Hôtel Tout bleu et Blanc</figcaption>
+                </figure>
+            </aside>   
+        </section>
+        <section id="activitySection">
+        </section>
     </main>
+    <footer id="footerSection">
+    </footer>
 </body>
 
 </html>
