--- a/index.html
+++ b/index.html
@@ -74,24 +74,52 @@
             <aside id="mostPopular">
                 <header>
                     <h2>Les plus populaires</h2>
-                    <div id="wrapperIcone"><i class="fas fa-chart-line"></i></div>    
+                    <div id="wrapperIcone"><i class="fas fa-chart-line"></i></div>
                 </header>
                 <figure>
-                    <img src="/assets/img/hebergements/popular1.jpg"
-                         alt="Hotel Le soleil du matin">
-                    <figcaption>Hotel Le soleil du matin</figcaption>
+                    <img class="imgPopular" src="/assets/img/hebergements/popular1.jpg" alt="Hotel Le soleil du matin">
+                    <div class="hostelInfo">
+                        <figcaption>Hôtel Le soleil du matin</figcaption>
+                        <p>Nuit à partir de 128€</p>
+                        <div class="starPopular">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
                 </figure>
                 <figure>
-                    <img src="/assets/img/hebergements/popular2.jpg"
-                         alt="Au coeur de l'eau Chambres d'hôtes">
-                    <figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
+                    <img class="imgPopular" src="/assets/img/hebergements/popular2.jpg"
+                        alt="Au coeur de l'eau Chambres d'hôtes">
+                    <div class="hostelInfo">
+                        <figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
+                        <p>Nuit à partir de 71€</p>
+                        <div class="starPopular">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
                 </figure>
                 <figure>
-                    <img src="/assets/img/hebergements/popular3.jpg"
-                         alt="Hôtel Tout bleu et Blanc">
-                    <figcaption>Hôtel Tout bleu et Blanc</figcaption>
+                    <img class="imgPopular" src="/assets/img/hebergements/popular3.jpg" alt="Hôtel Tout bleu et Blanc">
+                    <div class="hostelInfo">
+                        <figcaption>Hôtel Tout bleu et Blanc</figcaption>
+                        <p>Nuit à partir de 68€</p>
+                        <div class="starPopular">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
                 </figure>
-            </aside>   
+            </aside>
         </section>
         <section id="activitySection">
         </section>
