--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
             </div>
         </section>
         <section id="hostingSection">
-            <aside id="mostPopular">
+            <div class="mostPopular">
                 <header>
-                    <h2>Les plus populaires</h2>
-                    <div id="wrapperIcone"><i class="fas fa-chart-line"></i></div>
+                    <p>Les plus populaires</p>
+                    <i class="fas fa-chart-line"></i>
                 </header>
                 <figure>
-                    <img class="imgPopular" src="./assets/img/hebergements/popular1.jpg" alt="Hotel Le soleil du matin">
-                    <div class="hostelInfo">
-                        <figcaption>Hôtel Le soleil du matin</figcaption>
+                    <img class="imgPopular" src="./assets/img/hebergements/popular1.jpg" alt="Hôtel le soleil du matin">
+                    <div class="wrapperFig">
+                        <figcaption>Hôtel le soleil du matin</figcaption>
                         <p>Nuit à partir de 128€</p>
                         <div class="starPopular">
                             <i class="fas fa-star"></i>
@@ -91,9 +91,8 @@
                     </div>
                 </figure>
                 <figure>
-                    <img class="imgPopular" src="./assets/img/hebergements/popular2.jpg"
-                        alt="Au coeur de l'eau Chambres d'hôtes">
-                    <div class="hostelInfo">
+                    <img class="imgPopular" src="./assets/img/hebergements/popular2.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
+                    <div class="wrapperFig">
                         <figcaption>Au coeur de l'eau Chambres d'hôtes</figcaption>
                         <p>Nuit à partir de 71€</p>
                         <div class="starPopular">
@@ -101,25 +100,25 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star greyStar"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </figure>
                 <figure>
-                    <img class="imgPopular" src="./assets/img/hebergements/popular3.jpg" alt="Hôtel Tout bleu et Blanc">
-                    <div class="hostelInfo">
-                        <figcaption>Hôtel Tout bleu et Blanc</figcaption>
+                    <img class="imgPopular" src="./assets/img/hebergements/popular3.jpg" alt="Hôtel tout Bleu et Blanc">
+                    <div class="wrapperFig">
+                        <figcaption>Hôtel tout Bleu et Blanc</figcaption>
                         <p>Nuit à partir de 68€</p>
                         <div class="starPopular">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star greyStar"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
-                </figure>
-            </aside>
+                </figure> 
+            </div>
         </section>
         <section id="activitySection">
         </section>
