--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reservia</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     <link rel="stylesheet" href="./assets/css/mobile.css">
+    <title>Reservia</title>
 </head>
+
 <body>
-    
+    <p>test de font</p>
+    <i class="fas fa-map-marker-alt"></i>
+    <i class="fas fa-search"></i>
+    <i class="fas fa-money-bill-wave"></i>
+    <i class="fas fa-child"></i>
+    <i class="fas fa-heart"></i>
+    <i class="fas fa-dog"></i>
+    <i class="fas fa-info"></i>
+    <i class="fas fa-chart-line"></i>
+    <i class="fas fa-star"></i>
 </body>
+
 </html>
